<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileFragment">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/pink"
        android:gravity="center_vertical"
        android:text="@string/profile"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvFName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/passwordReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/change_password"
        android:clickable="true"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/pink_background"
        android:layout_marginHorizontal="50dp"
        android:text="@string/sign_out" />

</LinearLayout>