<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/pink"
            android:gravity="center_vertical"
            android:text="@string/select_your_price_range"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/range1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/white_background"
            android:text="@string/_0_20"
            android:textAlignment="center"
            android:elevation="10dp"
            android:textSize="24sp" />

        <Button
            android:id="@+id/range2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/white_background"
            android:text="@string/_20_30"
            android:textAlignment="center"
            android:elevation="10dp"
            android:textSize="24sp"  />

        <Button
            android:id="@+id/range3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/white_background"
            android:text="@string/_30_40"
            android:textAlignment="center"
            android:elevation="10dp"
            android:textSize="24sp"  />

        <Button
            android:id="@+id/range4"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/white_background"
            android:text="@string/_40_50"
            android:textAlignment="center"
            android:elevation="10dp"
            android:textSize="24sp"  />

        <Button
            android:id="@+id/range5"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/white_background"
            android:text="@string/_50"
            android:textAlignment="center"
            android:elevation="10dp"
            android:textSize="24sp"  />

        <Button
            android:id="@+id/range6"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/pink_background"
            android:text="@string/all"
            android:textAlignment="center"
            android:elevation="10dp"
            android:textSize="24sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>