<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FacebookFragment">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/pink"
        android:gravity="center_vertical"
        android:text="@string/profile"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvFName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/currently_signed_in_with_facebook"
        android:textAlignment="center"
        android:drawablePadding="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="50dp"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="50dp"
        android:src="@drawable/com_facebook_profile_picture_blank_square"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/profileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:drawablePadding="15dp"
        android:text="@string/username"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/logOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="50dp"
        android:text="@string/sign_out" />

</LinearLayout>