<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/pink"
        android:gravity="center_vertical"
        android:text="@string/select_your_look"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:stretchColumns="0,1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/trends"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/occasions"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/trendone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/white_background"
                android:text="@string/animal_print"
                android:elevation="10dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/occone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/white_background"
                android:text="@string/night_out"
                android:elevation="10dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                style="?android:attr/buttonBarButtonStyle"/>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/trendtwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/white_background"
                android:text="@string/neon"
                android:elevation="10dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/occtwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/white_background"
                android:text="@string/date_night"
                android:elevation="10dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                style="?android:attr/buttonBarButtonStyle"/>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/trendthree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/white_background"
                android:text="@string/_90_s"
                android:elevation="10dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/occthree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/white_background"
                android:text="@string/brunch"
                android:elevation="10dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                style="?android:attr/buttonBarButtonStyle"/>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/trendfour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/white_background"
                android:text="@string/polka_dot"
                android:elevation="10dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/occfour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/white_background"
                android:text="@string/xmas_party"
                android:elevation="10dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                style="?android:attr/buttonBarButtonStyle"/>

        </TableRow>

        <Button
            android:id="@+id/all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="15dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/pink_background"
            android:layout_marginHorizontal="20dp"
            android:text="@string/all"
            android:elevation="10dp"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            style="?android:attr/buttonBarButtonStyle"/>

    </TableLayout>


</LinearLayout>