<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="190dp"
    android:layout_height="290dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginBottom="10dp"
    android:elevation="3dp"
    android:padding="5dp"
    app:cardBackgroundColor="#fff"
    app:cardCornerRadius="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/rImageView"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/rDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/price"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/rCompany"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:text="company"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/rTitleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/title"
            android:textSize="15sp" />

    </LinearLayout>


</android.support.v7.widget.CardView>

